--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["vim-review contributors"]
 description = "A TUI for reviewing git changes with vim keybindings and inline comments"
 readme = "README.md"
-repository = "https://github.com/YOUR_USERNAME/vim-review"
+repository = "https://github.com/bobrenjc93/vr"
 license = "MIT"
 keywords = ["git", "diff", "review", "vim", "tui"]
 categories = ["command-line-utilities", "development-tools"]
