--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,6 @@ jobs:
             target: x86_64-unknown-linux-musl
             artifact_name: vr
             asset_name: vr-linux-x86_64
-          - os: ubuntu-latest
-            target: aarch64-unknown-linux-musl
-            artifact_name: vr
-            asset_name: vr-linux-aarch64
           - os: macos-latest
             target: x86_64-apple-darwin
             artifact_name: vr
@@ -45,28 +41,18 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install musl tools (Linux)
-        if: matrix.target == 'x86_64-unknown-linux-musl' || matrix.target == 'aarch64-unknown-linux-musl'
+      - name: Install musl tools (Linux x86_64)
+        if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
           sudo apt-get update
           sudo apt-get install -y musl-tools
-          if [ "${{ matrix.target }}" = "aarch64-unknown-linux-musl" ]; then
-            sudo apt-get install -y gcc-aarch64-linux-gnu
-          fi
 
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
-        env:
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER: aarch64-linux-gnu-gcc
 
       - name: Strip binary (Linux and macOS)
         if: matrix.os != 'windows-latest'
-        run: |
-          if [ "${{ matrix.target }}" = "aarch64-unknown-linux-musl" ]; then
-            aarch64-linux-gnu-strip target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
-          else
-            strip target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
-          fi
+        run: strip target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -91,7 +77,6 @@ jobs:
         run: |
           mkdir -p release
           mv artifacts/vr-linux-x86_64/vr release/vr-linux-x86_64
-          mv artifacts/vr-linux-aarch64/vr release/vr-linux-aarch64
           mv artifacts/vr-macos-x86_64/vr release/vr-macos-x86_64
           mv artifacts/vr-macos-aarch64/vr release/vr-macos-aarch64
           mv artifacts/vr-windows-x86_64.exe/vr.exe release/vr-windows-x86_64.exe
