--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "vim-review"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 authors = ["vim-review contributors"]
-description = "A TUI for reviewing git changes with vim keybindings and inline comments"
+description = "A TUI for reviewing git and mercurial changes with vim keybindings and inline comments"
 readme = "README.md"
 repository = "https://github.com/bobrenjc93/vr"
 license = "MIT"
-keywords = ["git", "diff", "review", "vim", "tui"]
+keywords = ["git", "mercurial", "hg", "diff", "review"]
 categories = ["command-line-utilities", "development-tools"]
 
 [[bin]]
@@ -17,7 +17,6 @@ path = "src/main.rs"
 [dependencies]
 ratatui = "0.29"
 crossterm = "0.28"
-git2 = { version = "0.19", default-features = false, features = ["vendored-openssl", "vendored-libgit2"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0"
